--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "https://firebase.google.com/docs/web/setup?authuser=0",
   "main": "handler.js",
   "dependencies": {
+    "aws-sdk": "^2.659.0",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "firebase": "^7.14.1"
