refactor to html only

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#102E50",
         "titleBar.activeBackground": "#164170",
         "titleBar.activeForeground": "#F7FAFD"
-    }
+    },
+    "liveServer.settings.port": 80,
 }
