--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "handler.js",
   "dependencies": {
     "aws-sdk": "^2.659.0",
-    "axios": "^0.19.2",
-    "cheerio": "^1.0.0-rc.3",
-    "firebase": "^7.14.1"
+    "axios": "^0.19.2"
   },
   "devDependencies": {},
   "scripts": {
